# Legal-Contract-Automation-Suit

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
config/: models.yaml  settings.py
config/prompts/: system_prompts.yaml  user_prompts.yaml
scripts/: benchmark.py  build_vector_db.py  evaluate.py  ingest_documents.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py  orchestrator.py  researcher.py  writer.py
src/api/: __init__.py  main.py
src/core/: __init__.py  audit_logger.py  config.py  contract_processor.py  embedder_base.py  legal_knowledge_base.py  llm_base.py
src/evaluation/: __init__.py  llm_judge.py  metrics.py  ragas_eval.py
src/models/: __init__.py  anthropic_client.py  embedding_models.py  google_client.py  local_llm.py  openai_client.py
src/retrieval/: __init__.py  chunking.py  embedding.py  hybrid_search.py  reranker.py  vector_store.py
src/subsystems/: __init__.py  contract_analysis.py  contract_drafting.py  legal_research.py  lifecycle_management.py  risk_compliance.py
src/tools/: __init__.py  calendar.py  database.py  email.py  web_search.py
src/utils/: __init__.py  cache.py  logger.py  monitoring.py
tests/: __init__.py
tests/evaluation/: test_golden_dataset.py
tests/integration/: test_api.py  test_e2e_flow.py
tests/unit/: test_agents.py  test_chunking.py  test_retrieval.py
